<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="f1.com.example.rohit.homework2.mainfragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"

        >


        <Button
            android:text="@string/btnlbladd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/btnadd"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:text="@string/btnlbledit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnedit"
            android:layout_below="@+id/btnadd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            />

        <Button
            android:text="@string/btnlbldelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnedit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btndelete"
            />

        <Button
            android:text="@string/btnlblshowlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnshowlist"
            android:layout_below="@+id/btndelete"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            />

        <Button
            android:text="@string/btnlblshowbyrating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnshowlistR"
            android:layout_below="@+id/btnshowlist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            />

    </LinearLayout>


</FrameLayout>
