...

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editedtxtname"
                android:layout_weight="7"
                android:textSize="20dp"
                android:maxLength="50"
                />


...
            <Button
                android:text="@string/editbtnlbl"
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:id="@+id/btneditmovie"
                android:layout_marginTop="10dp"
                android:onClick="saveEdit"
                />
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
...
